--- a/visualiser/src/main/resources/FXML/Lobby.fxml
+++ b/visualiser/src/main/resources/FXML/Lobby.fxml
@@ -4,10 +4,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+
 
 <GridPane fx:id="mainGrid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
@@ -30,8 +27,7 @@
       </TableView>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Time to Race Pre-Start:" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <Text fx:id="timeToStart" strokeType="OUTSIDE" strokeWidth="0.0" text="TIME PLACEHOLDER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-      <Button mnemonicParsing="false" text="I'm ready!" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-      <Button mnemonicParsing="false" onAction="#forceStart" prefHeight="25.0" prefWidth="98.0" text="Force Start" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Button fx:id="forceStartBtn" mnemonicParsing="false" onAction="#forceStart" prefHeight="25.0" prefWidth="98.0" text="Force Start" GridPane.columnIndex="1" GridPane.rowIndex="3" />
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="XML Status" GridPane.columnIndex="1" fx:id="xmlStatusText" />
    </children>
 </GridPane>
