--- a/visualiser/src/main/resources/FXML/StartingPage.fxml
+++ b/visualiser/src/main/resources/FXML/StartingPage.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.*?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.Controllers.StartController">
    <children>
       <Button fx:id="connectBtn" layoutX="359.0" layoutY="349.0" mnemonicParsing="false" onAction="#connect" text="Connect" />
@@ -22,5 +18,6 @@
       <Text layoutX="4.0" layoutY="593.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Developed by Full Mast" />
       <Text layoutX="297.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="IP:" />
       <Label fx:id="statusLbl" alignment="CENTER" layoutX="309.0" layoutY="379.0" prefHeight="15.0" prefWidth="171.0" />
+      <Button fx:id="practiceBtn" layoutX="329.0" layoutY="382.0" mnemonicParsing="false" onAction="#practiceClick" text="Practice Pre-Start" />
    </children>
 </AnchorPane>
