--- a/visualiser/src/main/resources/CSS/GeneralStyle.css
+++ b/visualiser/src/main/resources/CSS/GeneralStyle.css
@@ -5,6 +5,10 @@
     -fx-background: rgb(77, 77, 77);
 }
 
+.text-field {
+    -fx-text-fill: white;
+}
+
 .button {
     -fx-border-radius: 0px;
     -fx-background-radius: 0px;
