--- a/visualiser/src/main/resources/FXML/StartingPage.fxml
+++ b/visualiser/src/main/resources/FXML/StartingPage.fxml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../CSS/GeneralStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.Controllers.StartController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../CSS/GeneralStyle.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.Controllers.StartController">
    <children>
       <Button fx:id="connectBtn" layoutX="359.0" layoutY="349.0" mnemonicParsing="false" onAction="#connect" text="Connect" />
-      <TextField fx:id="ipField" layoutX="322.0" layoutY="311.0" />
-      <Text layoutX="345.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: WHITE;" text="SAIL!" wrappingWidth="109.71875">
+      <TextField fx:id="ipField" layoutX="322.0" layoutY="311.0" prefHeight="25.0" prefWidth="143.0" />
+      <Text layoutX="286.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: WHITE;" text="SAIL" wrappingWidth="209.22724437713623">
          <font>
-            <Font size="40.0" />
+            <Font name="Century Gothic" size="90.0" />
          </font>
       </Text>
-      <Text layoutX="346.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: WHITE;" text="(Like the song)" />
       <Text layoutX="4.0" layoutY="593.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: WHITE;" text="Developed by Full Mast" />
       <Text layoutX="297.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: WHITE;" text="IP:" />
       <Label fx:id="statusLbl" alignment="CENTER" layoutX="309.0" layoutY="379.0" prefHeight="15.0" prefWidth="171.0" />
+      <Text layoutX="469.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: WHITE;" text="LTS" wrappingWidth="44.22724437713623">
+         <font>
+            <Font name="Century Gothic" size="24.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
