--- a/visualiser/src/main/resources/CSS/GeneralStyle.css
+++ b/visualiser/src/main/resources/CSS/GeneralStyle.css
@@ -64,11 +64,7 @@
 }
 
 .jfx-check-box {
-    -jfx-checked-color: rgba(253, 231, 76, 0.9);
-}
-
-.jfx-check-box .mark {
-    -fx-background-color: black;
+    -jfx-checked-color: transparent;
 }
 
     /*--------------------------Background Images---------------------------------------*/
