--- a/visualiser/src/main/resources/CSS/GeneralStyle.css
+++ b/visualiser/src/main/resources/CSS/GeneralStyle.css
@@ -64,7 +64,7 @@
 }
 
 .jfx-check-box {
-    -jfx-checked-color: transparent;
+    -jfx-checked-color: rgba(253, 231, 76, 0.9);
 }
 
     /*--------------------------Background Images---------------------------------------*/
