--- a/visualiser/src/main/resources/FXML/RaceView.fxml
+++ b/visualiser/src/main/resources/FXML/RaceView.fxml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
+<?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.Group?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TreeTableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-<BorderPane fx:id="mainBorderPane" maxHeight="770.0" maxWidth="1208.0" minHeight="600.0" minWidth="800.0" prefHeight="728.0" prefWidth="1206.0" stylesheets="@../CSS/GeneralStyle.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+
+<BorderPane fx:id="mainBorderPane" maxHeight="770.0" maxWidth="1208.0" minHeight="600.0" minWidth="800.0" prefHeight="728.0" prefWidth="1206.0" stylesheets="@../CSS/GeneralStyle.css" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1">
     <left>
         <AnchorPane maxWidth="248" minWidth="248" prefWidth="248">
          <children>
@@ -56,8 +63,8 @@
             <JFXButton fx:id="toggleFinishersBtn" layoutX="13.0" layoutY="564.0" onAction="#toggleFinishers" prefHeight="25.0" prefWidth="118.0" text="Show Finishers" />
             <JFXButton fx:id="annotationBtn" layoutX="14.0" layoutY="600.0" onAction="#annotationBtnClicked" prefHeight="25.0" prefWidth="154.0" text="Remove Annotations" />
             <JFXButton fx:id="fpsBtn" layoutX="14.0" layoutY="700.0" onAction="#fpsBtnClicked" prefHeight="25.0" prefWidth="154.0" text="Remove FPS counter" />
-            <JFXCheckBox fx:id="BoatSpeedCheckBox" layoutX="3.0" layoutY="441.0" onAction="#ToggleBoatSpeedAnnotation" text="Boat Speeds" />
-            <JFXCheckBox fx:id="BoatNameCheckBox" layoutX="3.0" layoutY="422.0" onAction="#ToggleBoatNameAnnotation" text="Boat Names" />
+            <JFXCheckBox fx:id="BoatSpeedCheckBox" layoutX="3.0" layoutY="441.0" onAction="#ToggleBoatSpeedAnnotation" selected="true" text="Boat Speeds" />
+            <JFXCheckBox fx:id="BoatNameCheckBox" layoutX="3.0" layoutY="422.0" onAction="#ToggleBoatNameAnnotation" selected="true" text="Boat Names" />
 
             </children>
        </AnchorPane>
