--- a/visualiser/src/main/resources/CSS/GeneralStyle.css
+++ b/visualiser/src/main/resources/CSS/GeneralStyle.css
@@ -69,14 +69,7 @@
 
     /*--------------------------Background Images---------------------------------------*/
 
-#startAnchor {
-    -fx-background-image: url("../BackgroundImages/north_wind_blows.jpg");
-    -fx-background-repeat: no-repeat;
-    -fx-background-size: stretch;
-    -fx-opacity: 0.7;
-}
-
-#lobbyAnchor {
+#startAnchor, #lobbyAnchor, #scoreAnchor {
     -fx-background-image: url("../BackgroundImages/north_wind_blows.jpg");
     -fx-background-repeat: no-repeat;
     -fx-background-size: stretch;
