--- a/visualiser/src/main/resources/FXML/FinishingPage.fxml
+++ b/visualiser/src/main/resources/FXML/FinishingPage.fxml
@@ -20,7 +20,7 @@
          <children>
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
                <children>
-                   <Label alignment="CENTER" layoutX="245.0" layoutY="40.0" text="You have finished the race!" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                   <Label alignment="CENTER" layoutX="245.0" layoutY="40.0" text="The race is over for you" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                        <font>
                            <Font name="Century Gothic" size="32.0" />
                        </font>
